--- a/invoices.html
+++ b/invoices.html
@@ -14,7 +14,6 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <!-- Alert Container -->
     <div id="alertContainer"></div>
 
     <div class="app">
@@ -273,8 +272,8 @@
           <div class="row">
             <div class="col">
               <div class="form-group">
-                <label data-translate="default_tax_rate">
-                  نسبة الضريبة الافتراضية (%)
+                <label data-translate="default_tax_rate"
+                  >نسبة الضريبة الافتراضية (%)
                   <span class="required">*</span></label
                 >
                 <input
